css/style.css
/* ... */
/* --------------- catalog section --------------- */


.catalog {
  margin-bottom: 62px;
}

.catalog-flex {
  display: -moz-flex;
  display:  -ms-flex;
  display:   -o-flex;
  display: -webkit-box;
  display: -ms-flexbox;
  display:      flex;

  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.catalog-left {
  margin-right: 140px;
}

.catalog-left form {
  width: 260px;
}

.catalog-left h3 {
  margin: 0;
}

.catalog-sort {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;

  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.sort-types {
  margin-left: 209px;
}

.sort-types a {
  display: inline-block;

  padding: 0 7px 0 15px;

  list-style: none;

  vertical-align: top;
}

.catalog-items {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;

  margin-top: 47px;

  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.catalog-item {
  position: relative;

  margin-bottom: 33px;

  background-repeat: no-repeat;
}

.catalog-item img {
  border: 1px solid #eee;
}

.catalog-item::before {
  display: block;

  height: 40px;

  content: '';

  opacity: .12;
  background-image: url('../img/browser.svg');
  background-repeat: no-repeat;
}

.catalog-item:hover::before {
  opacity: 1;
}

.catalog-item-info {
  position: absolute;
  bottom: 2px;

  display: none;

  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  width: 100%;
  min-height: 231px;
  padding-top: 10px;

  text-align: center;

  background-color: #eee;
}

.catalog-item-info h3 {
  font-size: 18px;
  line-height: 30px;

  margin: 0;
  margin-top: 18px;

  text-transform: uppercase;

  color: #000;
}

.catalog-item-info p {
  line-height: 18px;

  display: block;

  margin-bottom: 30px;

  color: #666;
}

.catalog-item:hover .catalog-item-info {
  display: block;
}

.catalog-item figure {
  line-height: 0;

  margin: 0;
}

.catalog-image img {
  border: 1px solid #eee;
}

.cost {
  display: block;
}

.cost .cost-header {
  margin-top: 4px;
  margin-bottom: 55px;
}

.range-controls {
  position: relative;

  margin-bottom: 14px;
  padding: 39px 20px;

  border-radius: 5px;
  background: #eee;
}

.range-controls .scale {
  height: 2px;

  background: #d7dcde;
}

.range-controls .bar {
  width: 70%;
  height: 2px;

  background: #00ca74;
}

.range-controls .toggle {
  position: absolute;
  top: 31px;
  left: 0;

  width: 18px;
  height: 18px;

  cursor: pointer;

  border: 8px solid white;
  border-radius: 50%;
  background: #ababab;
  -webkit-box-shadow: 0 3px 1px 0 #cfcfcf;
          box-shadow: 0 3px 1px 0 #cfcfcf;
}

.range-controls .toggle-min {
  left: 19px;
}

.range-controls .toggle-max {
  left: 160px;
}

.price-controls {
  font-size: 0;
}

.price-controls label {
  font-family: inherit;
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;

  display: inline-block;

  width: 50%;

  vertical-align: top;
  text-transform: uppercase;
}

.price-min {
  text-align: left;
}

.price-min span {
  margin-right: 7px;
  margin-left: 1px;
}

.price-max {
  text-align: right;
}

.price-max span {
  margin-right: 8px;
}

.price-controls input {
  font-family: inherit;
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;

  width: 80px;
  padding: 8px 9px 8px 11px;

  text-align: center;
  vertical-align: baseline;
  text-transform: uppercase;

  border: none;
  border-radius: 5px;
  background: #eee;
}

.form-group {
  margin: 0;
  margin-top: 58px;
  padding: 0;
}

.form-group input {
  display: none;
}

.form-group ul {
  margin: 0;
  padding: 0;
  padding-left: 37px;

  list-style: none;
}

.form-group p {
  font-size: 16px;
  font-weight: 400;
  line-height: 25px;

  position: relative;

  display: block;

  margin: 0;
  margin-top: 18px;
  padding: 0;
  padding-left: 37px;
}

.sort-header {
  margin-top: -8px;
}

.cost h3,
.form-group h3,
.sort-header {
  font-size: 18px;
  font-weight: bold;
  line-height: 18px;

  text-transform: uppercase;

  color: #000;
}

.form-group h3 {
  margin-top: 45px;
}

.cost .label-text {
  line-height: 22px;

  text-transform: uppercase;

  color: #283136;
}

.form-group .label-radio,
.form-group .label-checkbox {
  line-height: 20px;

  cursor: pointer;

  color: #283136;
}

.form-group .label-radio::before {
  position: absolute;
  top: 1px;
  left: 1px;

  width: 25px;
  height: 25px;

  content: '';

  opacity: .4;
  background-image: url('../img/radio-off.svg');
  background-repeat: no-repeat;
}

.form-group input[type='radio']:checked + .label-radio::before {
  position: absolute;
  top: 3px;
  left: 1px;

  width: 25px;
  height: 25px;

  content: '';

  opacity: .4;
  background-image: url('../img/radio-on.svg');
  background-repeat: no-repeat;
}

.form-group .label-checkbox::before {
  position: absolute;
  top: 1px;
  left: 1px;

  width: 25px;
  height: 25px;

  content: '';

  opacity: .4;
  background-image: url('../img/checkbox-off.svg');
  background-repeat: no-repeat;
}

.form-group input[type='checkbox']:checked + .label-checkbox::before {
  position: absolute;
  top: 3px;
  left: 1px;

  width: 25px;
  height: 25px;

  content: '';

  opacity: .4;
  background-image: url('../img/checkbox-on.svg');
  background-repeat: no-repeat;
}

.form-group .label-radio:hover::before,
.form-group .label-checkbox:hover::before,
.form-group input[type='checkbox']:hover + .label-checkbox::before,
.form-group input[type='radio']:hover + .label-radio::before {
  opacity: 1;
}

.catalog-left button[type='submit'] {
  line-height: 20px;

  margin-top: 37px;
  padding: 16px 88px;

  border: 0;
}

.sort-item {
  font-size: 14px;
  line-height: 18px;

  text-decoration: none;
  text-transform: uppercase;

  opacity: .3;
  color: #000;
}

.sort-item:hover {
  opacity: .6;
}
/* ... */

